# roadmap

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  TECH_README.md  TODO.md  helloworld.py  pre-commit.sh  pyproject.toml  requirements.txt  roadmap.env  roadmap.md  roadmap.py  roadmap.schema.json  roadmap.template.md  test_helloworld.py  test_roadmap.py
.github/: pre-commit.sh
.github/workflows/: python-app.yml  release.yml
config/: roadmap.env
docs/: CHANGELOG.md  DECISION.md  DEVELOPMENT.md  TECH_README.md  TESTING.md  TODO.md  wsjf.md
examples/: roadmap.full.yml  roadmap.minimal.okr.yml  roadmap.minimal.yml  roadmap.sierra.yml  roadmap.yml
roadmap/: app.js  prototype_roadmap_optimized.html  roadmap.csv  roadmap.dot  roadmap.html  roadmap.md  roadmap.minimal.html  roadmap.minimal.md  roadmap.minimal.okr.html  roadmap.minimal.okr.md  roadmap_template.css  roadmap_template.dot  roadmap_template.html
roadmap/kanban/: deliverables.html  milestones.html
schema/: roadmap.json  roadmap.md  roadmap.okr.schema.json  roadmap.schema.json
src/roadmap_app/: __init__.py  cli.py  model.py  rendering.py  utils.py
templates/: markdown.roadmap.milestone.deliverable.template.md  markdown.roadmap.milestone.template.md  markdown.roadmap.objective.milestone.deliverable.template.md  markdown.roadmap.objective.milestone.template.md  package-lock.json  roadmap.template.md  templates.yml
tests/: README.md  conftest.py  roadmap.yml  test_integration.py  test_model.py  test_rendering.py  test_roadmap.py  test_utils.py
(+43 files in other folders)
